@@ -21,7 +21,9 @@ AUX tempname-free.patch 652 RMD160 4b0d06edd06a8f844f996fa1130d0c1b0ab8d0b0 SHA1
 DIST openjdk-7-ea-src-b13-24_may_2007.zip 81893737 RMD160 d074eb0a29cfee905fe98df4f3e9b608a7901d0e SHA1 b2b9ac4dca689863ca4d38db539f89da6e2dcb88 SHA256 0ec93e01056d2d712336349f81755c98bacb9d88de638811b9cc589686e82ad9
 DIST openjdk-7-ea-src-b14-21_jun_2007.zip 82865339 RMD160 2a3d9f8c10ea62e498f39300796048f06351805f SHA1 920e93e03f417f5077ef95c304d589e753bbbec8 SHA256 b2c5a987282c4f29de1f267c090581691a0b306e584af084750b480c9a9dc79d
 DIST openjdk-7-ea-src-b15-05_jul_2007.zip 82987463 RMD160 cf7283ab1e939d81f128b9d144d8e665f8a5a9e2 SHA1 c4a374cdc329a276cb8033fba0be7edc1523865d SHA256 f63b4fe6dc2695b69e5e9cbc4632d00df030510acb156f0e8940c09d6e98a239
+DIST openjdk-7-ea-src-b16-20_jul_2007.zip 83055324 RMD160 56e4e3a5821005b306f2b6350e1617b9ea06b939 SHA1 1ed0c97df76388c54ebb5aa89c307eaae172f80d SHA256 53850a8e9a1ba1133e36a191ca997c1f8a36efa3d76ac2fd5a5436146c424a59
 EBUILD openjdk-1.7.0.0_alpha13.ebuild 6665 RMD160 be2d3505f096da0613da5b2101073fdceb720930 SHA1 8d6ae04d1806989cc381e9eed0a7c4effbaa2c05 SHA256 da0dd2007103e840ffbf3a950d2ee609cc5ced33bea6ac6c7b84de61267a989f
 EBUILD openjdk-1.7.0.0_alpha14.ebuild 7456 RMD160 5fe63ff658f4621f01e1663673ccf8adb961ca1e SHA1 989a4b9619f38b786a113d5162a6c2da4ab96d2e SHA256 58baa59c9ca0cfaea922ab94c8f1b7005ff99cd6a993a46ba9e5d352e5a5e263
 EBUILD openjdk-1.7.0.0_alpha15.ebuild 7443 RMD160 c9420147590a385db6e122886b8ec3e1aa42462d SHA1 14dfea5204e4bec8dbebe7beaa7d083f006f36d4 SHA256 847636cafbc75cbd05d48d8b7845ebc40370171e6bec151939434e39d92c598e
-MISC ChangeLog 6356 RMD160 4e7de06910b18b1368b02018421903f492e1e009 SHA1 6b00701c4d4a25f95b0661b8a982d80cbd5ef2ac SHA256 470e44d510c2686bbd4cf03da55e0a32a12b4821b7a2d4257d68e1f104debc92
+EBUILD openjdk-1.7.0.0_alpha16.ebuild 7443 RMD160 bc364988757f00835773438cd3095966f962c804 SHA1 b780e9ae0269a47dfb3eb1f39233b0d84de1d802 SHA256 17c1f0e2d1de6d609d9a8b990625bd9751320adab67b5ed347d80afd7337d1f0
+MISC ChangeLog 6500 RMD160 3f8a55a523a450497df25a8b5760b06a1d35f275 SHA1 31ef22bee6e496e01a2d3a84a47c268f09c3c970 SHA256 8e4c5d0a235601c4d408db9e695d00b171c114ecf1d4fc9f413d4551ce4aaafb
