@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*openjdk-1.7.0.0_alpha16 (21 Jul 2007)
+
+  21 Jul 2007; Petteri Räty <betelgeuse@gentoo.org>
+  +openjdk-1.7.0.0_alpha16.ebuild:
+  Version bump
+
 *openjdk-1.7.0.0_alpha15 (14 Jul 2007)
 
   14 Jul 2007; Petteri Räty <betelgeuse@gentoo.org>
